--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ idna==3.7 ; python_version >= "3.12" and python_version < "4.0"
 itsdangerous==2.2.0 ; python_version >= "3.12" and python_version < "4"
 jinja2==3.1.3 ; python_version >= "3.12" and python_version < "4"
 markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4"
-neo4j==5.20.0 ; python_version >= "3.12" and python_version < "4.0"
+neo4j-rust-ext==5.20.0.0 ; python_version >= "3.12" and python_version < "4.0"
 openai==1.25.1 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.0 ; python_version >= "3.12" and python_version < "4"
 pydantic-core==2.18.2 ; python_version >= "3.12" and python_version < "4.0"
